--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "serve": "http-server -c-1 ./public",
     "start-dev": "npm run build-watch & npm run serve",
     "build-deploy": "webpack --mode=production",
-    "github-pages-deploy": "git add -f public/bundle.js public/bundle.js.map && git subtree push --prefix public origin gh-pages && git rm -f public/bundle.js public/bundle.js.map",
+    "github-pages-deploy": "git subtree push --prefix public origin gh-pages",
     "deploy": "npm run build-deploy && npm run github-pages-deploy"
   },
   "keywords": [],
