--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
     "build-watch": "webpack --mode=development -w",
     "serve": "http-server -c-1 ./public",
     "start-dev": "npm run build-watch & npm run serve",
-    "build-deploy": "webpack --mode=production",
-    "github-pages-deploy": "git subtree push --prefix public origin gh-pages",
-    "deploy": "npm run build-deploy && npm run github-pages-deploy"
+    "deploy": "./deploy.sh"
   },
   "keywords": [],
   "author": "",
